[tool.poetry]
name = "khartee"
version = "0.1.0"
description = "reading club opensource platform"
authors = ["odra <me@lrossetti.com>"]
license = "MIT"
packages = [
    {include="khartee", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-sugar = "^0.9.4"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
